src/Parser/Grammar.output
Terminals unused in grammar

   T_TWIGIL
   T_SCALAR_SIGIL
   T_LIST_SIGIL
   T_HASH_SIGIL
   T_OUR
   T_HAS
   T_EQ
   T_SLASH
   T_BSLASH
   T_LAMBDA
   T_LAMBDA_RW
   T_RANGE
   T_MOD
   T_ELSE


Grammar

    0 $accept: prog $end

    1 prog: stmts

    2 stmts: stmt
    3      | stmts stmt

    4 stmt: var_declarator T_SEMICOLON
    5     | package_declarator
    6     | func_declarator
    7     | regex_declarator
    8     | stmt_control
    9     | T_RETURN expr T_SEMICOLON
   10     | expr T_SEMICOLON
   11     | expr

   12 func_ident: T_ID
   13           | T_CODE_SIGIL T_ID

   14 package_declarator: T_PACKAGE T_ID xblock
   15                   | T_MODULE T_ID xblock
   16                   | T_CLASS T_ID xblock
   17                   | T_GRAMMAR T_ID xblock
   18                   | T_ROLE T_ID xblock

   19 func_declarator: T_SUB func_ident signature xblock
   20                | T_METHOD func_ident signature xblock
   21                | T_SUBMETHOD func_ident signature xblock

   22 regex_declarator: regex_type_identifier func_ident rblock

   23 regex_type_identifier: T_TOKEN
   24                      | T_REGEX
   25                      | T_RULE

   26 rblock: T_LBRACE '<' T_RBRACE
   27       | T_LBRACE T_RBLOCK T_RBRACE

   28 signature: T_LPAREN param_list T_RPAREN

   29 param_list: /* empty */
   30           | parameter
   31           | param_list T_COMMA parameter

   32 parameter: param_var
   33          | T_SPLAT param_var
   34          | param_var '?'
   35          | named_param
   36          | T_SPLAT named_param

   37 param_var: variable

   38 named_param: ':' param_var

   39 var_declarator: T_MY variable
   40               | T_MY variable assignment expr

   41 variable: T_SIGIL T_ID

   42 stmt_control: if_stmt
   43             | unless_stmt
   44             | for_stmt
   45             | while_stmt

   46 if_stmt: T_IF expr xblock

   47 unless_stmt: T_UNLESS expr xblock

   48 for_stmt: T_FOR expr xblock

   49 while_stmt: T_WHILE expr xblock

   50 methodop: func_ident T_LPAREN args_list T_RPAREN
   51         | variable T_DOT func_ident T_LPAREN args_list T_RPAREN
   52         | T_ID T_DOT func_ident T_LPAREN args_list T_RPAREN

   53 args_list: /* empty */
   54          | expr
   55          | args_list T_COMMA expr

   56 xblock: T_LBRACE T_RBRACE
   57       | T_LBRACE stmts T_RBRACE

   58 expr: variable
   59     | constants
   60     | variable infix expr
   61     | constants infix expr
   62     | methodop
   63     | T_LPAREN expr T_RPAREN

   64 p6regex: '/' nibbler '/'

   65 nibbler: T_STRINGC

   66 number: T_DIGIT
   67       | T_DIGIT T_DOT T_DIGIT

   68 constants: number
   69          | stringc
   70          | p6regex

   71 infix: assignment
   72      | comparison
   73      | math_ops
   74      | string_ops
   75      | other_ops

   76 stringc: T_STRINGC

   77 assignment: T_BIND
   78           | T_RO_BIND

   79 other_ops: T_TRIPLE_EQ
   80          | T_EQV
   81          | T_NOT
   82          | T_REPEATER

   83 math_ops: T_PLUS
   84         | T_MINUS
   85         | T_MUL
   86         | T_DIV

   87 string_ops: T_STITCH

   88 comparison: T_CN_EQ
   89           | T_CN_NEQ
   90           | T_CN_LT
   91           | T_CN_GT
   92           | T_CN_LTE
   93           | T_CN_GTE
   94           | T_CN_EQL
   95           | T_CS_EQ
   96           | T_CS_NEQ
   97           | T_CS_LT
   98           | T_CS_GT
   99           | T_CS_LTE
  100           | T_CS_GTE
  101           | T_CS_EQL
  102           | T_SMARTMATCH


Terminals, with rules where they appear

$end (0) 0
'/' (47) 64
':' (58) 38
'<' (60) 26
'?' (63) 34
error (256)
T_ID (258) 12 13 14 15 16 17 18 41 52
T_DIGIT (259) 66 67
T_RBLOCK (260) 27
T_STRINGC (261) 65 76
T_SIGIL (262) 41
T_TWIGIL (263)
T_SCALAR_SIGIL (264)
T_LIST_SIGIL (265)
T_HASH_SIGIL (266)
T_CODE_SIGIL (267) 13
T_MY (268) 39 40
T_OUR (269)
T_HAS (270)
T_EQ (271)
T_BIND (272) 77
T_RO_BIND (273) 78
T_PACKAGE (274) 14
T_MODULE (275) 15
T_CLASS (276) 16
T_GRAMMAR (277) 17
T_ROLE (278) 18
T_SUB (279) 19
T_METHOD (280) 20
T_SUBMETHOD (281) 21
T_SPLAT (282) 33 36
T_REGEX (283) 24
T_TOKEN (284) 23
T_RULE (285) 25
T_SLASH (286)
T_BSLASH (287)
T_LAMBDA (288)
T_LAMBDA_RW (289)
T_RANGE (290)
T_CN_EQ (291) 88
T_CN_NEQ (292) 89
T_CN_LT (293) 90
T_CN_GT (294) 91
T_CN_LTE (295) 92
T_CN_GTE (296) 93
T_CN_EQL (297) 94
T_CS_EQ (298) 95
T_CS_NEQ (299) 96
T_CS_LT (300) 97
T_CS_GT (301) 98
T_CS_LTE (302) 99
T_CS_GTE (303) 100
T_CS_EQL (304) 101
T_SMARTMATCH (305) 102
T_TRIPLE_EQ (306) 79
T_EQV (307) 80
T_NOT (308) 81
T_REPEATER (309) 82
T_PLUS (310) 83
T_MINUS (311) 84
T_MUL (312) 85
T_DIV (313) 86
T_MOD (314)
T_STITCH (315) 87
T_IF (316) 46
T_ELSE (317)
T_UNLESS (318) 47
T_FOR (319) 48
T_WHILE (320) 49
T_RETURN (321) 9
T_LBRACE (322) 26 27 56 57
T_RBRACE (323) 26 27 56 57
T_LPAREN (324) 28 50 51 52 63
T_RPAREN (325) 28 50 51 52 63
T_COMMA (326) 31 55
T_SEMICOLON (327) 4 9 10
T_DOT (328) 51 52 67


Nonterminals, with rules where they appear

$accept (78)
    on left: 0
prog (79)
    on left: 1, on right: 0
stmts (80)
    on left: 2 3, on right: 1 3 57
stmt (81)
    on left: 4 5 6 7 8 9 10 11, on right: 2 3
func_ident (82)
    on left: 12 13, on right: 19 20 21 22 50 51 52
package_declarator (83)
    on left: 14 15 16 17 18, on right: 5
func_declarator (84)
    on left: 19 20 21, on right: 6
regex_declarator (85)
    on left: 22, on right: 7
regex_type_identifier (86)
    on left: 23 24 25, on right: 22
rblock (87)
    on left: 26 27, on right: 22
signature (88)
    on left: 28, on right: 19 20 21
param_list (89)
    on left: 29 30 31, on right: 28 31
parameter (90)
    on left: 32 33 34 35 36, on right: 30 31
param_var (91)
    on left: 37, on right: 32 33 34 38
named_param (92)
    on left: 38, on right: 35 36
var_declarator (93)
    on left: 39 40, on right: 4
variable (94)
    on left: 41, on right: 37 39 40 51 58 60
stmt_control (95)
    on left: 42 43 44 45, on right: 8
if_stmt (96)
    on left: 46, on right: 42
unless_stmt (97)
    on left: 47, on right: 43
for_stmt (98)
    on left: 48, on right: 44
while_stmt (99)
    on left: 49, on right: 45
methodop (100)
    on left: 50 51 52, on right: 62
args_list (101)
    on left: 53 54 55, on right: 50 51 52 55
xblock (102)
    on left: 56 57, on right: 14 15 16 17 18 19 20 21 46 47 48 49
expr (103)
    on left: 58 59 60 61 62 63, on right: 9 10 11 40 46 47 48 49 54
    55 60 61 63
p6regex (104)
    on left: 64, on right: 70
nibbler (105)
    on left: 65, on right: 64
number (106)
    on left: 66 67, on right: 68
constants (107)
    on left: 68 69 70, on right: 59 61
infix (108)
    on left: 71 72 73 74 75, on right: 60 61
stringc (109)
    on left: 76, on right: 69
assignment (110)
    on left: 77 78, on right: 40 71
other_ops (111)
    on left: 79 80 81 82, on right: 75
math_ops (112)
    on left: 83 84 85 86, on right: 73
string_ops (113)
    on left: 87, on right: 74
comparison (114)
    on left: 88 89 90 91 92 93 94 95 96 97 98 99 100 101 102, on right:
    72


state 0

    0 $accept: . prog $end

    T_ID          shift, and go to state 1
    T_DIGIT       shift, and go to state 2
    T_STRINGC     shift, and go to state 3
    T_SIGIL       shift, and go to state 4
    T_CODE_SIGIL  shift, and go to state 5
    T_MY          shift, and go to state 6
    T_PACKAGE     shift, and go to state 7
    T_MODULE      shift, and go to state 8
    T_CLASS       shift, and go to state 9
    T_GRAMMAR     shift, and go to state 10
    T_ROLE        shift, and go to state 11
    T_SUB         shift, and go to state 12
    T_METHOD      shift, and go to state 13
    T_SUBMETHOD   shift, and go to state 14
    T_REGEX       shift, and go to state 15
    T_TOKEN       shift, and go to state 16
    T_RULE        shift, and go to state 17
    T_IF          shift, and go to state 18
    T_UNLESS      shift, and go to state 19
    T_FOR         shift, and go to state 20
    T_WHILE       shift, and go to state 21
    T_RETURN      shift, and go to state 22
    T_LPAREN      shift, and go to state 23
    '/'           shift, and go to state 24

    prog                   go to state 25
    stmts                  go to state 26
    stmt                   go to state 27
    func_ident             go to state 28
    package_declarator     go to state 29
    func_declarator        go to state 30
    regex_declarator       go to state 31
    regex_type_identifier  go to state 32
    var_declarator         go to state 33
    variable               go to state 34
    stmt_control           go to state 35
    if_stmt                go to state 36
    unless_stmt            go to state 37
    for_stmt               go to state 38
    while_stmt             go to state 39
    methodop               go to state 40
    expr                   go to state 41
    p6regex                go to state 42
    number                 go to state 43
    constants              go to state 44
    stringc                go to state 45


state 1

   12 func_ident: T_ID .
   52 methodop: T_ID . T_DOT func_ident T_LPAREN args_list T_RPAREN

    T_DOT  shift, and go to state 46

    $default  reduce using rule 12 (func_ident)


state 2

   66 number: T_DIGIT .
   67       | T_DIGIT . T_DOT T_DIGIT

    T_DOT  shift, and go to state 47

    $default  reduce using rule 66 (number)


state 3

   76 stringc: T_STRINGC .

    $default  reduce using rule 76 (stringc)


state 4

   41 variable: T_SIGIL . T_ID

    T_ID  shift, and go to state 48


state 5

   13 func_ident: T_CODE_SIGIL . T_ID

    T_ID  shift, and go to state 49


state 6

   39 var_declarator: T_MY . variable
   40               | T_MY . variable assignment expr

    T_SIGIL  shift, and go to state 4

    variable  go to state 50


state 7

   14 package_declarator: T_PACKAGE . T_ID xblock

    T_ID  shift, and go to state 51


state 8

   15 package_declarator: T_MODULE . T_ID xblock

    T_ID  shift, and go to state 52


state 9

   16 package_declarator: T_CLASS . T_ID xblock

    T_ID  shift, and go to state 53


state 10

   17 package_declarator: T_GRAMMAR . T_ID xblock

    T_ID  shift, and go to state 54


state 11

   18 package_declarator: T_ROLE . T_ID xblock

    T_ID  shift, and go to state 55


state 12

   19 func_declarator: T_SUB . func_ident signature xblock

    T_ID          shift, and go to state 56
    T_CODE_SIGIL  shift, and go to state 5

    func_ident  go to state 57


state 13

   20 func_declarator: T_METHOD . func_ident signature xblock

    T_ID          shift, and go to state 56
    T_CODE_SIGIL  shift, and go to state 5

    func_ident  go to state 58


state 14

   21 func_declarator: T_SUBMETHOD . func_ident signature xblock

    T_ID          shift, and go to state 56
    T_CODE_SIGIL  shift, and go to state 5

    func_ident  go to state 59


state 15

   24 regex_type_identifier: T_REGEX .

    $default  reduce using rule 24 (regex_type_identifier)


state 16

   23 regex_type_identifier: T_TOKEN .

    $default  reduce using rule 23 (regex_type_identifier)


state 17

   25 regex_type_identifier: T_RULE .

    $default  reduce using rule 25 (regex_type_identifier)


state 18

   46 if_stmt: T_IF . expr xblock

    T_ID          shift, and go to state 1
    T_DIGIT       shift, and go to state 2
    T_STRINGC     shift, and go to state 3
    T_SIGIL       shift, and go to state 4
    T_CODE_SIGIL  shift, and go to state 5
    T_LPAREN      shift, and go to state 23
    '/'           shift, and go to state 24

    func_ident  go to state 28
    variable    go to state 34
    methodop    go to state 40
    expr        go to state 60
    p6regex     go to state 42
    number      go to state 43
    constants   go to state 44
    stringc     go to state 45


state 19

   47 unless_stmt: T_UNLESS . expr xblock

    T_ID          shift, and go to state 1
    T_DIGIT       shift, and go to state 2
    T_STRINGC     shift, and go to state 3
    T_SIGIL       shift, and go to state 4
    T_CODE_SIGIL  shift, and go to state 5
    T_LPAREN      shift, and go to state 23
    '/'           shift, and go to state 24

    func_ident  go to state 28
    variable    go to state 34
    methodop    go to state 40
    expr        go to state 61
    p6regex     go to state 42
    number      go to state 43
    constants   go to state 44
    stringc     go to state 45


state 20

   48 for_stmt: T_FOR . expr xblock

    T_ID          shift, and go to state 1
    T_DIGIT       shift, and go to state 2
    T_STRINGC     shift, and go to state 3
    T_SIGIL       shift, and go to state 4
    T_CODE_SIGIL  shift, and go to state 5
    T_LPAREN      shift, and go to state 23
    '/'           shift, and go to state 24

    func_ident  go to state 28
    variable    go to state 34
    methodop    go to state 40
    expr        go to state 62
    p6regex     go to state 42
    number      go to state 43
    constants   go to state 44
    stringc     go to state 45


state 21

   49 while_stmt: T_WHILE . expr xblock

    T_ID          shift, and go to state 1
    T_DIGIT       shift, and go to state 2
    T_STRINGC     shift, and go to state 3
    T_SIGIL       shift, and go to state 4
    T_CODE_SIGIL  shift, and go to state 5
    T_LPAREN      shift, and go to state 23
    '/'           shift, and go to state 24

    func_ident  go to state 28
    variable    go to state 34
    methodop    go to state 40
    expr        go to state 63
    p6regex     go to state 42
    number      go to state 43
    constants   go to state 44
    stringc     go to state 45


state 22

    9 stmt: T_RETURN . expr T_SEMICOLON

    T_ID          shift, and go to state 1
    T_DIGIT       shift, and go to state 2
    T_STRINGC     shift, and go to state 3
    T_SIGIL       shift, and go to state 4
    T_CODE_SIGIL  shift, and go to state 5
    T_LPAREN      shift, and go to state 23
    '/'           shift, and go to state 24

    func_ident  go to state 28
    variable    go to state 34
    methodop    go to state 40
    expr        go to state 64
    p6regex     go to state 42
    number      go to state 43
    constants   go to state 44
    stringc     go to state 45


state 23

   63 expr: T_LPAREN . expr T_RPAREN

    T_ID          shift, and go to state 1
    T_DIGIT       shift, and go to state 2
    T_STRINGC     shift, and go to state 3
    T_SIGIL       shift, and go to state 4
    T_CODE_SIGIL  shift, and go to state 5
    T_LPAREN      shift, and go to state 23
    '/'           shift, and go to state 24

    func_ident  go to state 28
    variable    go to state 34
    methodop    go to state 40
    expr        go to state 65
    p6regex     go to state 42
    number      go to state 43
    constants   go to state 44
    stringc     go to state 45


state 24

   64 p6regex: '/' . nibbler '/'

    T_STRINGC  shift, and go to state 66

    nibbler  go to state 67


state 25

    0 $accept: prog . $end

    $end  shift, and go to state 68


state 26

    1 prog: stmts .
    3 stmts: stmts . stmt

    T_ID          shift, and go to state 1
    T_DIGIT       shift, and go to state 2
    T_STRINGC     shift, and go to state 3
    T_SIGIL       shift, and go to state 4
    T_CODE_SIGIL  shift, and go to state 5
    T_MY          shift, and go to state 6
    T_PACKAGE     shift, and go to state 7
    T_MODULE      shift, and go to state 8
    T_CLASS       shift, and go to state 9
    T_GRAMMAR     shift, and go to state 10
    T_ROLE        shift, and go to state 11
    T_SUB         shift, and go to state 12
    T_METHOD      shift, and go to state 13
    T_SUBMETHOD   shift, and go to state 14
    T_REGEX       shift, and go to state 15
    T_TOKEN       shift, and go to state 16
    T_RULE        shift, and go to state 17
    T_IF          shift, and go to state 18
    T_UNLESS      shift, and go to state 19
    T_FOR         shift, and go to state 20
    T_WHILE       shift, and go to state 21
    T_RETURN      shift, and go to state 22
    T_LPAREN      shift, and go to state 23
    '/'           shift, and go to state 24

    $default  reduce using rule 1 (prog)

    stmt                   go to state 69
    func_ident             go to state 28
    package_declarator     go to state 29
    func_declarator        go to state 30
    regex_declarator       go to state 31
    regex_type_identifier  go to state 32
    var_declarator         go to state 33
    variable               go to state 34
    stmt_control           go to state 35
    if_stmt                go to state 36
    unless_stmt            go to state 37
    for_stmt               go to state 38
    while_stmt             go to state 39
    methodop               go to state 40
    expr                   go to state 41
    p6regex                go to state 42
    number                 go to state 43
    constants              go to state 44
    stringc                go to state 45


state 27

    2 stmts: stmt .

    $default  reduce using rule 2 (stmts)


state 28

   50 methodop: func_ident . T_LPAREN args_list T_RPAREN

    T_LPAREN  shift, and go to state 70


state 29

    5 stmt: package_declarator .

    $default  reduce using rule 5 (stmt)


state 30

    6 stmt: func_declarator .

    $default  reduce using rule 6 (stmt)


state 31

    7 stmt: regex_declarator .

    $default  reduce using rule 7 (stmt)


state 32

   22 regex_declarator: regex_type_identifier . func_ident rblock

    T_ID          shift, and go to state 56
    T_CODE_SIGIL  shift, and go to state 5

    func_ident  go to state 71


state 33

    4 stmt: var_declarator . T_SEMICOLON

    T_SEMICOLON  shift, and go to state 72


state 34

   51 methodop: variable . T_DOT func_ident T_LPAREN args_list T_RPAREN
   58 expr: variable .
   60     | variable . infix expr

    T_BIND        shift, and go to state 73
    T_RO_BIND     shift, and go to state 74
    T_CN_EQ       shift, and go to state 75
    T_CN_NEQ      shift, and go to state 76
    T_CN_LT       shift, and go to state 77
    T_CN_GT       shift, and go to state 78
    T_CN_LTE      shift, and go to state 79
    T_CN_GTE      shift, and go to state 80
    T_CN_EQL      shift, and go to state 81
    T_CS_EQ       shift, and go to state 82
    T_CS_NEQ      shift, and go to state 83
    T_CS_LT       shift, and go to state 84
    T_CS_GT       shift, and go to state 85
    T_CS_LTE      shift, and go to state 86
    T_CS_GTE      shift, and go to state 87
    T_CS_EQL      shift, and go to state 88
    T_SMARTMATCH  shift, and go to state 89
    T_TRIPLE_EQ   shift, and go to state 90
    T_EQV         shift, and go to state 91
    T_NOT         shift, and go to state 92
    T_REPEATER    shift, and go to state 93
    T_PLUS        shift, and go to state 94
    T_MINUS       shift, and go to state 95
    T_MUL         shift, and go to state 96
    T_DIV         shift, and go to state 97
    T_STITCH      shift, and go to state 98
    T_DOT         shift, and go to state 99

    $default  reduce using rule 58 (expr)

    infix       go to state 100
    assignment  go to state 101
    other_ops   go to state 102
    math_ops    go to state 103
    string_ops  go to state 104
    comparison  go to state 105


state 35

    8 stmt: stmt_control .

    $default  reduce using rule 8 (stmt)


state 36

   42 stmt_control: if_stmt .

    $default  reduce using rule 42 (stmt_control)


state 37

   43 stmt_control: unless_stmt .

    $default  reduce using rule 43 (stmt_control)


state 38

   44 stmt_control: for_stmt .

    $default  reduce using rule 44 (stmt_control)


state 39

   45 stmt_control: while_stmt .

    $default  reduce using rule 45 (stmt_control)


state 40

   62 expr: methodop .

    $default  reduce using rule 62 (expr)


state 41

   10 stmt: expr . T_SEMICOLON
   11     | expr .

    T_SEMICOLON  shift, and go to state 106

    $default  reduce using rule 11 (stmt)


state 42

   70 constants: p6regex .

    $default  reduce using rule 70 (constants)


state 43

   68 constants: number .

    $default  reduce using rule 68 (constants)


state 44

   59 expr: constants .
   61     | constants . infix expr

    T_BIND        shift, and go to state 73
    T_RO_BIND     shift, and go to state 74
    T_CN_EQ       shift, and go to state 75
    T_CN_NEQ      shift, and go to state 76
    T_CN_LT       shift, and go to state 77
    T_CN_GT       shift, and go to state 78
    T_CN_LTE      shift, and go to state 79
    T_CN_GTE      shift, and go to state 80
    T_CN_EQL      shift, and go to state 81
    T_CS_EQ       shift, and go to state 82
    T_CS_NEQ      shift, and go to state 83
    T_CS_LT       shift, and go to state 84
    T_CS_GT       shift, and go to state 85
    T_CS_LTE      shift, and go to state 86
    T_CS_GTE      shift, and go to state 87
    T_CS_EQL      shift, and go to state 88
    T_SMARTMATCH  shift, and go to state 89
    T_TRIPLE_EQ   shift, and go to state 90
    T_EQV         shift, and go to state 91
    T_NOT         shift, and go to state 92
    T_REPEATER    shift, and go to state 93
    T_PLUS        shift, and go to state 94
    T_MINUS       shift, and go to state 95
    T_MUL         shift, and go to state 96
    T_DIV         shift, and go to state 97
    T_STITCH      shift, and go to state 98

    $default  reduce using rule 59 (expr)

    infix       go to state 107
    assignment  go to state 101
    other_ops   go to state 102
    math_ops    go to state 103
    string_ops  go to state 104
    comparison  go to state 105


state 45

   69 constants: stringc .

    $default  reduce using rule 69 (constants)


state 46

   52 methodop: T_ID T_DOT . func_ident T_LPAREN args_list T_RPAREN

    T_ID          shift, and go to state 56
    T_CODE_SIGIL  shift, and go to state 5

    func_ident  go to state 108


state 47

   67 number: T_DIGIT T_DOT . T_DIGIT

    T_DIGIT  shift, and go to state 109


state 48

   41 variable: T_SIGIL T_ID .

    $default  reduce using rule 41 (variable)


state 49

   13 func_ident: T_CODE_SIGIL T_ID .

    $default  reduce using rule 13 (func_ident)


state 50

   39 var_declarator: T_MY variable .
   40               | T_MY variable . assignment expr

    T_BIND     shift, and go to state 73
    T_RO_BIND  shift, and go to state 74

    $default  reduce using rule 39 (var_declarator)

    assignment  go to state 110


state 51

   14 package_declarator: T_PACKAGE T_ID . xblock

    T_LBRACE  shift, and go to state 111

    xblock  go to state 112


state 52

   15 package_declarator: T_MODULE T_ID . xblock

    T_LBRACE  shift, and go to state 111

    xblock  go to state 113


state 53

   16 package_declarator: T_CLASS T_ID . xblock

    T_LBRACE  shift, and go to state 111

    xblock  go to state 114


state 54

   17 package_declarator: T_GRAMMAR T_ID . xblock

    T_LBRACE  shift, and go to state 111

    xblock  go to state 115


state 55

   18 package_declarator: T_ROLE T_ID . xblock

    T_LBRACE  shift, and go to state 111

    xblock  go to state 116


state 56

   12 func_ident: T_ID .

    $default  reduce using rule 12 (func_ident)


state 57

   19 func_declarator: T_SUB func_ident . signature xblock

    T_LPAREN  shift, and go to state 117

    signature  go to state 118


state 58

   20 func_declarator: T_METHOD func_ident . signature xblock

    T_LPAREN  shift, and go to state 117

    signature  go to state 119


state 59

   21 func_declarator: T_SUBMETHOD func_ident . signature xblock

    T_LPAREN  shift, and go to state 117

    signature  go to state 120


state 60

   46 if_stmt: T_IF expr . xblock

    T_LBRACE  shift, and go to state 111

    xblock  go to state 121


state 61

   47 unless_stmt: T_UNLESS expr . xblock

    T_LBRACE  shift, and go to state 111

    xblock  go to state 122


state 62

   48 for_stmt: T_FOR expr . xblock

    T_LBRACE  shift, and go to state 111

    xblock  go to state 123


state 63

   49 while_stmt: T_WHILE expr . xblock

    T_LBRACE  shift, and go to state 111

    xblock  go to state 124


state 64

    9 stmt: T_RETURN expr . T_SEMICOLON

    T_SEMICOLON  shift, and go to state 125


state 65

   63 expr: T_LPAREN expr . T_RPAREN

    T_RPAREN  shift, and go to state 126


state 66

   65 nibbler: T_STRINGC .

    $default  reduce using rule 65 (nibbler)


state 67

   64 p6regex: '/' nibbler . '/'

    '/'  shift, and go to state 127


state 68

    0 $accept: prog $end .

    $default  accept


state 69

    3 stmts: stmts stmt .

    $default  reduce using rule 3 (stmts)


state 70

   50 methodop: func_ident T_LPAREN . args_list T_RPAREN
